# TIMEASE

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_CONTRACT.md  ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CLARIFY.md  CLAUDE.md  CONTEXT.md  FIXES_APPLIED.md  FIX_PLAN_AFFECTATIONS.md  KNOW.md  ONEVALIDcam.py  PLAN.md  README.md  UI_DESIGN_REVAMP.html  analysis_results.md  implementation_plan.md  main.py  package-lock.json  package.json  pyproject.toml  run_api.py  start.sh  task.md  ui_world_class_and_api_cost_strategy.md
.github/workflows/: main.yml
collab/: 6631b0e9-15e1-499f-a9f0-617b57502e8f.json  9240bb36-437a-4929-ba62-d9f2ae812697.json  a0ed3a64-eb1c-4f70-9045-4d46d9c9eeab.json  acf6dc47-aaf8-4b83-b205-e991ecef444e.json  be2def0e-8032-46ea-a001-7ec6d4a95d2a.json  c3bb7231-6af6-49b6-962f-7a6ee61f76f5.json  c6fc688e-5a1e-45ea-a37a-adc5199f5c41.json  c70b4ed6-38f1-4975-bdfd-80a8e7f4dbc1.json  d50b19d0-1c7e-4d08-bdf4-73cc0f3b1d16.json  test-token.json
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/.next/: BUILD_ID  _events_10532.json  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentActionPill.tsx  ChatInput.tsx  ChatMessage.tsx  ChipInput.tsx  ClientLayout.tsx  CodeBlock.tsx  DataPanel.tsx  FileImportModal.tsx  QuickReplies.tsx  Sidebar.tsx  StepIndicator.tsx  StepPanel.tsx  ThemeToggle.tsx  TimetableGrid.test.tsx  TimetableGrid.tsx  Toast.tsx  ValidationErrorPanel.tsx
frontend/hooks/: useSession.ts
frontend/lib/: api.ts  scenario-prefill.test.ts  scenario-prefill.ts  test-scenarios.ts  types.ts  validation.test.ts  validation.ts
scripts/: clean_logs.sh  convert_fet_to_timease.py  dev.sh  generate_sample.py  solve_from_excel.py  solve_from_json.py
scripts/benchmark/: build_fet_manifest.py  run_fet_timease_benchmark.py
tests/: test_analysis.py  test_conflicts.py  test_io.py  test_manual_assignments.py  test_models.py  test_plans.py  test_real_world_scenarios.py  test_solver.py  test_teacher_colors.py  test_validation.py
timease/api/: __init__.py  (+2 more)
(+421 files in other folders)
