[project]
name = "timease"
version = "0.1.0"
description = "Générateur d'emploi du temps scolaire basé sur Google OR-Tools CP-SAT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ortools >= 9.9",
    "reflex >= 0.8.0",
    "openpyxl >= 3.1",
    "reportlab >= 4.1",
    "python-docx >= 1.1",
    "anthropic >= 0.40",
    "pytest >= 8.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "xlrd>=2.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Note: Strict mode disabled temporarily - API layer needs type annotations
# TODO: Enable strict mode after adding proper type hints to timease/api/
# strict = true
disallow_untyped_defs = false
warn_redundant_casts = true
warn_unused_ignores = true

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
]
