[project]
name = "timease"
version = "0.1.0"
description = "Générateur d'emploi du temps scolaire basé sur Google OR-Tools CP-SAT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ortools >= 9.9",
    "openpyxl >= 3.1",
    "reportlab >= 4.1",
    "python-docx >= 1.1",
    "pytest >= 8.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "xlrd>=2.0",
    "pypdf>=4.0",
    "openai>=2.30.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20",
    "pre-commit>=4",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
warn_redundant_casts = true
warn_unused_ignores = true
